# ComfyUI-Magos-Nodes

./: .gitignore  MANUAL.md  README.md  __init__.py  camera_math.py  debug_logger.py  dwpose_cluster_retargeter.py  dwpose_temporal_editor.py  dwpose_temporal_extractor.py  dwpose_temporal_renderer.py  nlf_integration.py  pyproject.toml  requirements.txt  wan_master_control.py  wan_sampler_presets.py
js/: dwpose_cluster_retargeter.js  dwpose_temporal_editor.js  wan_sampler_presets.js
